@@ -1,3 +1,8 @@
+2016-01-15  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/69117
+	* gcc.dg/torture/pr69117.c: New testcase.
+
 2015-01-14  Ryan Burn  <contact@rnburn.com>
 
 	PR c++/69048
